--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,15 +5,11 @@ on:
   push:
     branches:
       - main
-  workflow_call:     # damit andere Workflows ihn starten können
-    secrets:
-      GITHUB_TOKEN:
-        required: true
+  workflow_call: # nur als Einstiegspunkt für andere Workflows, kein eigenes Secret nötig
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
