--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+            fetch-depth: 0         # vollständige Git-Historie
+            persist-credentials: true  # erlaubt Push über das Actions-Token
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
