--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,14 +8,12 @@ on:
   workflow_call: # nur als Einstiegspunkt für andere Workflows, kein eigenes Secret nötig
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: windows-latest   # Powershell benötigt Windows Runner
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-            fetch-depth: 0         # vollständige Git-Historie
-            persist-credentials: true  # erlaubt Push über das Actions-Token
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -25,8 +23,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        shell: pwsh
 
-      - name: Run Deployment Script
-        run: .\deploy.ps1
+      - name: Run deploy.ps1
         shell: pwsh
+        run: |
+          Write-Host "Start Deployment..."
+          .\deploy.ps1
